Started creating DDD in core. Created base models.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,9 @@
             "database": "ecommercedb",
             "password": "123"
         }
+    ],
+    "cSpell.words": [
+        "Ecommerce",
+        "Mediat"
     ]
 }
