--- a/Server/EcommerceProject.Persistence/EcommerceProject.Persistence.csproj
+++ b/Server/EcommerceProject.Persistence/EcommerceProject.Persistence.csproj
@@ -14,8 +14,14 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
   </ItemGroup>
 
+
   <ItemGroup>
-    <ProjectReference Include="..\EcommerceProject.Core\EcommerceProject.Core.csproj" />
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\EcommerceProject.Application\EcommerceProject.Application.csproj" />
   </ItemGroup>
 
 </Project>
