Added in all value objects factory method.

--- a/Server/EcommerceProject.API/EcommerceProject.API.csproj
+++ b/Server/EcommerceProject.API/EcommerceProject.API.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\EcommerceProject.Application\EcommerceProject.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\Responses\" />
+  </ItemGroup>
+
 </Project>
