--- a/Server/EcommerceProject.Application/EcommerceProject.Application.csproj
+++ b/Server/EcommerceProject.Application/EcommerceProject.Application.csproj
@@ -8,12 +8,18 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EcommerceProject.Core\EcommerceProject.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dto\Product\Requests\" />
+    <Folder Include="Dto\Product\Responses\" />
   </ItemGroup>
 
 </Project>
