feat:Implement FailResultBuilder and readonly errors. Try to add factory validation rule.

--- a/Server/EcommerceProject.API/EcommerceProject.API.csproj
+++ b/Server/EcommerceProject.API/EcommerceProject.API.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\Responses\" />
+    <Folder Include="Http\Product\Responses\" />
   </ItemGroup>
 
 </Project>
