feat:Implement CQRS for categories

--- a/Server/EcommerceProject.Application/EcommerceProject.Application.csproj
+++ b/Server/EcommerceProject.Application/EcommerceProject.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\EcommerceProject.Core\EcommerceProject.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\" />
+  </ItemGroup>
+
 </Project>
