feat:Implement value objects factories for User.

--- a/Server/EcommerceProject.Application/EcommerceProject.Application.csproj
+++ b/Server/EcommerceProject.Application/EcommerceProject.Application.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\" />
+    <Folder Include="UseCases\Users\Queries\GetUsers\" />
   </ItemGroup>
 
 </Project>
