feat:Implement authentication with jwt token.

--- a/Server/EcommerceProject.API/EcommerceProject.API.csproj
+++ b/Server/EcommerceProject.API/EcommerceProject.API.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EcommerceProject.Core\EcommerceProject.Core.csproj" />
+    <ProjectReference Include="..\EcommerceProject.Infrastructure\EcommerceProject.Infrastructure.csproj" />
     <ProjectReference Include="..\EcommerceProject.Persistence\EcommerceProject.Persistence.csproj" />
     <ProjectReference Include="..\EcommerceProject.Application\EcommerceProject.Application.csproj" />
   </ItemGroup>
