--- a/Server/EcommerceProject.API/appsettings.Development.json
+++ b/Server/EcommerceProject.API/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "StoreDbContext" : "User ID=postgres;Password=123;Host=localhost;Port=5432;Database=ecommercedb;"
+  },
+  "JwtSettings": {
+    "ExpirationInMinutes": 1,
+    "SecretKey": "awdawdawdawdwdawdadwadwwdawdawdawdawdawdwdwad"
   }
 }
