feat:Add to last commit unversioned files.

--- a/Server/EcommerceProject.API/appsettings.Development.json
+++ b/Server/EcommerceProject.API/appsettings.Development.json
@@ -11,5 +11,8 @@
   "JwtSettings": {
     "ExpirationInMinutes": 30,
     "SecretKey": "awdawdawdawdwdawdadwadwwdawdawdawdawdawdwdwad"
+  },
+  "RefreshTokenSettings": {
+    "ExpirationInDays": 15
   }
 }
