--- a/Server/src/Services/Users/Users.API/appsettings.Development.json
+++ b/Server/src/Services/Users/Users.API/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "JwtSettings": {
+    "ExpirationInMinutes": 30,
+    "SecretKey": "awdawdawdawdwdawdadwadwwdawdawdawdawdawdwdwad"
+  },
+  "RefreshTokenSettings": {
+    "ExpirationInDays": 15
   }
 }
