--- a/Server/src/Shared/Shared.Core/Shared.Core.csproj
+++ b/Server/src/Shared/Shared.Core/Shared.Core.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <EmbeddedResource Include="SwaggerDarkTheme\*.css" />
+    </ItemGroup>
+
 </Project>
