--- a/Server/src/Services/Catalog/Catalog.Application/Catalog.Application.csproj
+++ b/Server/src/Services/Catalog/Catalog.Application/Catalog.Application.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Catalog.Core\Catalog.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.11" />
+    </ItemGroup>
+
 </Project>
