--- a/Server/src/Services/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/Server/src/Services/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Shared\Shared.Messaging\Shared.Messaging.csproj" />
       <ProjectReference Include="..\Ordering.Core\Ordering.Core.csproj" />
     </ItemGroup>
 
