--- a/Server/src/Services/Catalog/Catalog.API/Dockerfile
+++ b/Server/src/Services/Catalog/Catalog.API/Dockerfile
@@ -11,9 +11,11 @@ COPY ["Server/src/Services/Catalog/Catalog.Application/Catalog.Application.cspro
 COPY ["Server/src/Services/Catalog/Catalog.Core/Catalog.Core.csproj", "Services/Catalog/Catalog.Core/"]
 COPY ["Server/src/Services/Catalog/Catalog.Persistence/Catalog.Persistence.csproj", "Services/Catalog/Catalog.Persistence/"]
 COPY ["Server/src/Shared/Shared.Core/Shared.Core.csproj", "Shared/Shared.Core/"]
+COPY ["Server/src/Shared/Shared.Messaging/Shared.Messaging.csproj", "Shared/Shared.Messaging/"]
 RUN dotnet restore "Services/Catalog/Catalog.API/Catalog.API.csproj"
 COPY ["Server/src/Services/Catalog", "Services/Catalog"]
 COPY ["Server/src/Shared/Shared.Core", "Shared/Shared.Core"]
+COPY ["Server/src/Shared/Shared.Messaging", "Shared/Shared.Messaging"]
 WORKDIR "/src/Services/Catalog/Catalog.API"
 RUN dotnet build "Catalog.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
