--- a/Server/src/Services/Users/Users.Application/Users.Application.csproj
+++ b/Server/src/Services/Users/Users.Application/Users.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Shared\Shared.Messaging\Shared.Messaging.csproj" />
       <ProjectReference Include="..\Users.Core\Users.Core.csproj" />
     </ItemGroup>
 
