feat:Add Yarp gateway and shared authentication and authorization.

--- a/Server/src/Services/Users/Users.API/appsettings.json
+++ b/Server/src/Services/Users/Users.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtSettings": {
+    "ExpirationInMinutes": 30,
+    "SecretKey": "awdawdawdawdwdawdadwadwwdawdawdawdawdawdwdwad"
+  },
+  "RefreshTokenSettings": {
+    "ExpirationInDays": 15
+  }
 }
