--- a/Server/src/APIGateways/YarpGateway/appsettings.json
+++ b/Server/src/APIGateways/YarpGateway/appsettings.json
@@ -49,6 +49,13 @@
     },
     "Clusters": {
       "users-cluster": {
+        "ClusterId": "users-cluster",
+        "Swagger": {
+          "Endpoint": "/users-api/swagger/v1/swagger.json",
+          "Spec": "http://users.api:8080/swagger/v1/swagger.json",
+          "OriginPath": "/users-api/",
+          "TargetPath": "^.*?(\/)"
+        },
         "Destinations": {
           "destination1": {
             "Address": "http://users.api:8080"
@@ -56,6 +63,13 @@
         }
       },
       "catalog-cluster": {
+        "ClusterId": "catalog-cluster",
+        "Swagger": {
+          "Endpoint": "/catalog-api/swagger/v1/swagger.json",
+          "Spec": "http://catalog.api:7080/swagger/v1/swagger.json",
+          "OriginPath": "/catalog-api/",
+          "TargetPath": "^.*?(\/)"
+        },
         "Destinations": {
           "destination1": {
             "Address": "http://catalog.api:7080"
@@ -63,6 +77,13 @@
         }
       },
       "ordering-cluster": {
+        "ClusterId": "ordering-cluster",
+        "Swagger": {
+          "Endpoint": "/ordering-api/swagger/v1/swagger.json",
+          "Spec": "http://ordering.api:6080/swagger/v1/swagger.json",
+          "OriginPath": "/ordering-api/",
+          "TargetPath": "^.*?(\/)"
+        },
         "Destinations": {
           "destination1": {
             "Address": "http://ordering.api:6080"
