--- a/Server/src/Services/Catalog/Catalog.Application/Catalog.Application.csproj
+++ b/Server/src/Services/Catalog/Catalog.Application/Catalog.Application.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Mapster" Version="7.4.0" />
+      <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.11" />
     </ItemGroup>
