feat: Implement email verification.

--- a/Server/src/Services/Users/Users.API/appsettings.Development.json
+++ b/Server/src/Services/Users/Users.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Email": {
+    "Host": "users.smtp",
+    "Port": 25,
+    "Sender": "asp-ecommerce-web-api",
+    "SenderEmail": "asp-ecommerce-web-api@noreply.com"
   }
 }
