--- a/Server/src/Services/Users/Users.API/appsettings.json
+++ b/Server/src/Services/Users/Users.API/appsettings.json
@@ -8,10 +8,18 @@
   "AllowedHosts": "*",
 
   "JwtSettings": {
-    "ExpirationInMinutes": 30,
-    "SecretKey": "awdawdawdawdwdawdadwadwwdawdawdawdawdawdwdwad"
+    "ExpirationInMinutes": 30
   },
   "RefreshTokenSettings": {
     "ExpirationInDays": 15
+  },
+  "EmailVerificationTokenSettings": {
+    "ExpirationInMinutes": 15
+  },
+  "Email": {
+    "Host": "",
+    "Port": 0,
+    "Sender": "",
+    "SenderEmail": ""
   }
 }
