--- a/Server/src/Services/Users/Users.Infrastructure/Users.Infrastructure.csproj
+++ b/Server/src/Services/Users/Users.Infrastructure/Users.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentEmail.Smtp" Version="3.0.2" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     </ItemGroup>
 
