--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -63,6 +63,10 @@ services:
       - ./Server/secrets/jwt_public_key.pem:/home/app/secrets/jwt_public_key.pem:ro        
     depends_on:
       - users.db 
+      - users.smtp
+        
+  users.smtp:
+    container_name: users.smtp
 
   catalog.api:
     environment:
