feat(basket):Add save cart and get cart use cases. Fix json serialization with MartenDb.

--- a/Server/src/APIGateways/YarpGateway/appsettings.Development.json
+++ b/Server/src/APIGateways/YarpGateway/appsettings.Development.json
@@ -4,5 +4,111 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ReverseProxy": {
+    "Routes": {
+      "users-route": {
+        "ClusterId": "users-cluster",
+        "Match": {
+          "Path": "users-api/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "{**catch-all}"
+          }
+        ]
+      },
+      "catalog-route": {
+        "ClusterId": "catalog-cluster",
+        "Match": {
+          "Path": "catalog-api/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "{**catch-all}"
+          }
+        ]
+      },
+      "ordering-route": {
+        "ClusterId": "ordering-cluster",
+        "Match": {
+          "Path": "ordering-api/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "{**catch-all}"
+          }
+        ]
+      },
+      "basket-route": {
+        "ClusterId": "basket-cluster",
+        "Match": {
+          "Path": "basket-api/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "{**catch-all}"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "users-cluster": {
+        "ClusterId": "users-cluster",
+        "Swagger": {
+          "Endpoint": "/users-api/swagger/v1/swagger.json",
+          "Spec": "http://users.api:8080/swagger/v1/swagger.json",
+          "OriginPath": "/users-api/",
+          "TargetPath": "^.*?(\/)"
+        },
+        "Destinations": {
+          "destination1": {
+            "Address": "http://users.api:8080"
+          }
+        }
+      },
+      "catalog-cluster": {
+        "ClusterId": "catalog-cluster",
+        "Swagger": {
+          "Endpoint": "/catalog-api/swagger/v1/swagger.json",
+          "Spec": "http://catalog.api:7080/swagger/v1/swagger.json",
+          "OriginPath": "/catalog-api/",
+          "TargetPath": "^.*?(\/)"
+        },
+        "Destinations": {
+          "destination1": {
+            "Address": "http://catalog.api:7080"
+          }
+        }
+      },
+      "ordering-cluster": {
+        "ClusterId": "ordering-cluster",
+        "Swagger": {
+          "Endpoint": "/ordering-api/swagger/v1/swagger.json",
+          "Spec": "http://ordering.api:6080/swagger/v1/swagger.json",
+          "OriginPath": "/ordering-api/",
+          "TargetPath": "^.*?(\/)"
+        },
+        "Destinations": {
+          "destination1": {
+            "Address": "http://ordering.api:6080"
+          }
+        }
+      },
+      "basket-cluster": {
+        "ClusterId": "basket-cluster",
+        "Swagger": {
+          "Endpoint": "/basket-api/swagger/v1/swagger.json",
+          "Spec": "http://basket.api:5080/swagger/v1/swagger.json",
+          "OriginPath": "/basket-api/",
+          "TargetPath": "^.*?(\/)"
+        },
+        "Destinations": {
+          "destination1": {
+            "Address": "http://basket.api:5080"
+          }
+        }
+      }
+    }
   }
 }
