--- a/Server/tests/Users/Users.Tests.Integration/Users.Tests.Integration.csproj
+++ b/Server/tests/Users/Users.Tests.Integration/Users.Tests.Integration.csproj
@@ -14,6 +14,8 @@
         <PackageReference Include="FluentAssertions" Version="8.2.0" />
         <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="4.4.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -23,7 +25,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\src\Services\Users\Users.Core\Users.Core.csproj" />
+      <ProjectReference Include="..\..\..\src\Services\Users\Users.Application\Users.Application.csproj" />
+      <ProjectReference Include="..\..\..\src\Services\Users\Users.Persistence\Users.Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Application\" />
     </ItemGroup>
 
 </Project>
