--- a/Server/tests/Users/Users.Tests.Unit/Users.Tests.Unit.csproj
+++ b/Server/tests/Users/Users.Tests.Unit/Users.Tests.Unit.csproj
@@ -27,4 +27,8 @@
       <ProjectReference Include="..\..\..\src\Services\Users\Users.Core\Users.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Core\" />
+    </ItemGroup>
+
 </Project>
