--- a/Server/tests/Users/Users.Tests.Integration/Users.Tests.Integration.csproj
+++ b/Server/tests/Users/Users.Tests.Integration/Users.Tests.Integration.csproj
@@ -13,9 +13,13 @@
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="FluentAssertions" Version="8.2.0" />
         <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.17" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="NSubstitute" Version="5.3.0" />
+        <PackageReference Include="Respawn" Version="6.2.1" />
+        <PackageReference Include="Testcontainers.Papercut" Version="4.6.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.4.0" />
+        <PackageReference Include="Testcontainers.RabbitMq" Version="4.6.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -25,6 +29,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\src\Services\Users\Users.API\Users.API.csproj" />
       <ProjectReference Include="..\..\..\src\Services\Users\Users.Application\Users.Application.csproj" />
       <ProjectReference Include="..\..\..\src\Services\Users\Users.Persistence\Users.Persistence.csproj" />
     </ItemGroup>
@@ -33,4 +38,5 @@
       <Folder Include="Application\" />
     </ItemGroup>
 
+    
 </Project>
