--- a/Server/tests/Ordering/Ordering.Tests.Integration/Ordering.Tests.Integration.csproj
+++ b/Server/tests/Ordering/Ordering.Tests.Integration/Ordering.Tests.Integration.csproj
@@ -13,6 +13,9 @@
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="FluentAssertions" Version="8.5.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
+        <PackageReference Include="Respawn" Version="6.2.1" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="4.6.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -22,7 +25,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\src\Services\Ordering\Ordering.Core\Ordering.Core.csproj" />
+      <ProjectReference Include="..\..\..\src\Services\Ordering\Ordering.Application\Ordering.Application.csproj" />
+      <ProjectReference Include="..\..\..\src\Services\Ordering\Ordering.Persistence\Ordering.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
