--- a/Server/tests/Catalog/Catalog.Tests.Integration/Catalog.Tests.Integration.csproj
+++ b/Server/tests/Catalog/Catalog.Tests.Integration/Catalog.Tests.Integration.csproj
@@ -12,10 +12,13 @@
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="FluentAssertions" Version="8.5.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.17" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="Respawn" Version="6.2.1" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.6.0" />
+        <PackageReference Include="Testcontainers.RabbitMq" Version="4.6.0" />
+        <PackageReference Include="Testcontainers.Redis" Version="4.6.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -27,6 +30,10 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\src\Services\Catalog\Catalog.API\Catalog.API.csproj" />
       <ProjectReference Include="..\..\..\src\Services\Catalog\Catalog.Application\Catalog.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Api\Endpoints\ProductsModule\" />
     </ItemGroup>
 
 </Project>
